--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>SemTrack Dataset</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="A Large-scale Dataset for Semantic Tracking in the Wild" name="description">
+  <meta content="SemTrack Dataset, SUTD, Tracking, Semantic, Scene Graph Understanding" name="keywords">
 
   <!-- Favicons --> 
   <link href="assets/img/favicon_io/favicon-32x32.png" rel="icon">
