--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         </div> 
 
         <div class="row-paper mx-5">
-            <p>If you find our paper helpful, please cite our paper.</p>
+            <!-- <p>If you find our paper helpful, please cite our paper.</p> -->
             <div class="bg-body text-start p-3">
               @inproceedings{wang2024semtrack, <br>
                 title={SemTrack: A Large Scale Dataset for Semantic Tracking in the Wild}, <br>
