--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 <div class="col-lg-4 info mt-4 mt-lg-0">
                   <i class="bi bi-tools"></i>
                   <h4><a href="#">Toolkit</a></h4>
-                  <p>Start exploring LIT with our toolkit</p>
+                  <p>Start exploring SemTrack with our toolkit</p>
                 </div>
 
                 <div class="col-lg-4 info mt-4 mt-lg-0">
@@ -225,7 +225,7 @@
 
 
     <!-- ======= Evaluation metrics Section ======= -->
-    <section id="evaluation_metrics" class="contact">
+<!--     <section id="evaluation_metrics" class="contact">
       <div class="container">
 
         <div class="section-title">
@@ -257,7 +257,8 @@
           </div>
         </div>
       </div>
-    </section><!-- End Download Section -->
+    </section> -->
+    <!-- End Download Section -->
 
 
     <!-- ======= Publication Section ======= -->
