Update navbar and hero sec

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#download">Download</a></li>
-          <li><a class="nav-link scrollto" href="#evaluation_metrics">Evaluation Metrics</a></li>
+<!--           <li><a class="nav-link scrollto" href="#evaluation_metrics">Evaluation Metrics</a></li> -->
           <li><a class="nav-link scrollto " href="#publication">Publication</a></li>
           <!-- <li><a class="nav-link scrollto" href="#people">People</a></li> -->
         </ul>
@@ -74,7 +74,7 @@
       <h1>A Large Scale Dataset for Semantic Tracking in the Wild</h1>
       <a href="#about" class="btn btn-primary scrollto">About</a>
       <a href="#download" class="btn btn-primary scrollto">Download</a>
-      <a href="#evaluation_metrics" class="btn btn-primary scrollto">Evaluation Metrics</a>
+<!--       <a href="#evaluation_metrics" class="btn btn-primary scrollto">Evaluation Metrics</a> -->
       <a href="#publication" class="btn btn-primary scrollto">Publication</a>
       <!-- <a href="#people" class="btn btn-primary scrollto">People</a> -->
 
