update download link

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
           <div class="col-lg-10">
 
             <div class="info-wrap">
-              <div class="row">
+              <div class="row justify-content-center">
                 <div class="col-lg-4 info">
                   <i class="bi bi-file-earmark"></i>
                   <h4><a href="#">Annotations</a></h4>
@@ -200,11 +200,11 @@
 
                 <div class="col-lg-4 info mt-4 mt-lg-0">
                   <i class="bi bi-tools"></i>
-                  <h4><a href="#">Toolkit</a></h4>
+                  <h4><a href="https://github.com/sutdcv/SemTrack/">Toolkit</a></h4>
                   <p>Start exploring SemTrack with our toolkit</p>
                 </div>
 
-                <div class="col-lg-4 info mt-4 mt-lg-0">
+                <!-- <div class="col-lg-4 info mt-4 mt-lg-0">
                   <i class="bi bi-camera-video"></i>
                   <h4>Videos</h4>
                   <p>
@@ -214,7 +214,7 @@
                     Download video<br>
                     <a href="https://taodataset.org/">TAO</a><br>
                   </p>
-                </div>
+                </div> -->
               </div>
             </div>
 
@@ -279,7 +279,7 @@
             <b>SemTrack: A Large Scale Dataset for Semantic Tracking in the Wild</b><br>
             Pengfei Wang*, Xiaofei Hui*, Jing Wu*, Zile Yang*, Kian Eng Ong*, Xinge Zhao, Beijia Lu, Dezhao Huang, Evan Ling, Weiling Chen, Keng Teck Ma, Minhoe Hur, Jun Liu<br>
             <i>ECCV</i>, 2024 <br>
-            [<a href="#" target="_blank">ArXiv</a>] [<a href="https://github.com/sutdcv/SemTrack" target="_blank">Code</a>]  <br>
+            [<a href="#" target="_blank">ArXiv</a>] [<a href="https://github.com/sutdcv/SemTrack" target="_blank">Toolkit</a>] [<a href="https://github.com/sutdcv/SemTrack/tree/eval" target="_blank">Evaluation Code</a>]  <br>
             Note: Authors with * all have equal contributions. 
           </div>
         </div> 
