add annotation link

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
               <div class="row justify-content-center">
                 <div class="col-lg-4 info">
                   <i class="bi bi-file-earmark"></i>
-                  <h4><a href="#">Annotations</a></h4>
+                  <h4><a href="https://drive.google.com/drive/folders/1x44fAHdnwQjjhWwMU1BLBE-AuMZLpBCu?usp=sharing">Annotations</a></h4>
                   <p>Download our annotations</p>
                 </div>
 
