--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <a href="https://research.google.com/ava/">AVA</a>,
             <a href="http://got-10k.aitestunion.com/">GOT-10K</a>,
             <a href="https://image-net.org/challenges/LSVRC/2016/">ILSVRC2016</a>, 
-            , SemTrack is a large scale dataset aiming for a new task: Semantic Tracking.  
+            , we introduce SemTrack, a large and comprehensive dataset containing annotations of the target's semantic trajectory. The dataset contains 7.4 million frames from 6,964 videos, covering a wide range of 52 different interaction classes with 116 different object classes spanning 10 different supercategories in 12 types of different scenes, including both indoor and outdoor environments.
           </p>
         </div>
 
