--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p style="font-size: 20px;">Combining 
+          <p style="font-size: 20px;">
+            We introduce SemTrack, a large and comprehensive dataset containing annotations of the target's semantic trajectory. The dataset contains 7.4 million frames from 6,964 videos, covering a wide range of 52 different interaction classes with 116 different object classes spanning 10 different supercategories in 12 types of different scenes, including both indoor and outdoor environments. Our data sources come from 
             <a href="https://www.multimediacommons.org/">YFCC100M</a>, 
             <a href="https://taodataset.org/">TAO</a>, 
             <a href="https://xdshang.github.io/docs/vidor.html">VIDOR</a>, 
@@ -124,8 +125,7 @@
             <a href="http://hacs.csail.mit.edu/">HACS</a>, 
             <a href="https://research.google.com/ava/">AVA</a>,
             <a href="http://got-10k.aitestunion.com/">GOT-10K</a>,
-            <a href="https://image-net.org/challenges/LSVRC/2016/">ILSVRC2016</a>, 
-            , we introduce SemTrack, a large and comprehensive dataset containing annotations of the target's semantic trajectory. The dataset contains 7.4 million frames from 6,964 videos, covering a wide range of 52 different interaction classes with 116 different object classes spanning 10 different supercategories in 12 types of different scenes, including both indoor and outdoor environments.
+            <a href="https://image-net.org/challenges/LSVRC/2016/">ILSVRC2016</a>. 
           </p>
         </div>
 
