--- a/index.html
+++ b/index.html
@@ -193,14 +193,14 @@
             <div class="info-wrap">
               <div class="row justify-content-center">
                 <div class="col-lg-4 info">
-                  <i class="bi bi-file-earmark"></i>
-                  <h4><a href="https://drive.google.com/drive/folders/1x44fAHdnwQjjhWwMU1BLBE-AuMZLpBCu?usp=sharing">Annotations</a></h4>
-                  <p>Download our annotations</p>
+                  <i class="bi bi-tools"></i>
+                  <h4><a href="https://forms.office.com/Pages/ResponsePage.aspx?id=drd2NJDpck-5UGJImDFiPQJNzw6AhuZDkzEViiWzJltUNjhKM01KWjhXN0FBNjcxNVBZQk03VVFHQi4u">Dataset & Toolkit</a></h4>
+                  <p>Download our dataset and toolkit</p>
                 </div>
 
                 <div class="col-lg-4 info mt-4 mt-lg-0">
-                  <i class="bi bi-tools"></i>
-                  <h4><a href="https://github.com/sutdcv/SemTrack/">Toolkit</a></h4>
+                  <i class="bi bi-code"></i>
+                  <h4><a href="https://github.com/sutdcv/SemTrack/tree/eval">Evaluation Code</a></h4>
                   <p>Start exploring SemTrack with our toolkit</p>
                 </div>
 
@@ -279,7 +279,7 @@
             <b>SemTrack: A Large Scale Dataset for Semantic Tracking in the Wild</b><br>
             Pengfei Wang*, Xiaofei Hui*, Jing Wu*, Zile Yang*, Kian Eng Ong*, Xinge Zhao, Beijia Lu, Dezhao Huang, Evan Ling, Weiling Chen, Keng Teck Ma, Minhoe Hur, Jun Liu<br>
             <i>ECCV</i>, 2024 <br>
-            [<a href="#" target="_blank">ArXiv</a>] [<a href="https://github.com/sutdcv/SemTrack" target="_blank">Toolkit</a>] [<a href="https://github.com/sutdcv/SemTrack/tree/eval" target="_blank">Evaluation Code</a>]  <br>
+            [<a href="#" target="_blank">ArXiv</a>] [<a href="https://github.com/sutdcv/SemTrack/tree/eval" target="_blank">Evaluation Code</a>]  <br>
             Note: Authors with * all have equal contributions. 
           </div>
         </div> 
