--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 <div class="col-lg-4 info mt-4 mt-lg-0">
                   <i class="bi bi-code"></i>
                   <h4><a href="https://github.com/sutdcv/SemTrack/tree/eval">Evaluation Code</a></h4>
-                  <p>Start exploring SemTrack with our toolkit</p>
+                  <p>Start exploring SemTrack</p>
                 </div>
 
                 <!-- <div class="col-lg-4 info mt-4 mt-lg-0">
