rm sutd logo and acknowledge

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
       <a href="#publication" class="btn btn-primary scrollto">Publication</a>
       <!-- <a href="#people" class="btn btn-primary scrollto">People</a> -->
 
-      <div class="uni-logo">
+      <!-- <div class="uni-logo">
         <img src="assets/img/sutd.png" alt="Uni LOGO" width="240" height="100" style="background-color:rgb(255, 255, 255);">
-      </div>
+      </div> -->
       
     </div>
   </section>
@@ -345,7 +345,7 @@
     <!-- End Team Section -->
 
     <!-- ======= Acknowledgement Section ======= -->
-    <section id="ccknowledgement" class="contact ">
+    <!-- <section id="ccknowledgement" class="contact ">
       <div class="container">
 
         <div class="section-title">
@@ -355,7 +355,8 @@
 
     </iframe>
 
-    </section><!-- End Contact Section -->
+    </section> -->
+    <!-- End Contact Section -->
 
   </main>
   <!-- End #main -->
