--- a/index.html
+++ b/index.html
@@ -195,13 +195,13 @@
                 <div class="col-lg-4 info">
                   <i class="bi bi-tools"></i>
                   <h4><a href="https://forms.office.com/Pages/ResponsePage.aspx?id=drd2NJDpck-5UGJImDFiPQJNzw6AhuZDkzEViiWzJltUNjhKM01KWjhXN0FBNjcxNVBZQk03VVFHQi4u">Dataset & Toolkit</a></h4>
-                  <p>Download our dataset and toolkit</p>
+                  <p>Download our dataset and toolkit.</p>
                 </div>
 
                 <div class="col-lg-4 info mt-4 mt-lg-0">
                   <i class="bi bi-code"></i>
                   <h4><a href="https://github.com/sutdcv/SemTrack/tree/eval">Evaluation Code</a></h4>
-                  <p>Start exploring SemTrack</p>
+                  <p>Start exploring SemTrack.</p>
                 </div>
 
                 <!-- <div class="col-lg-4 info mt-4 mt-lg-0">
