--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
             <b>SemTrack: A Large Scale Dataset for Semantic Tracking in the Wild</b><br>
             Pengfei Wang*, Xiaofei Hui*, Jing Wu*, Zile Yang*, Kian Eng Ong*, Xinge Zhao, Beijia Lu, Dezhao Huang, Evan Ling, Weiling Chen, Keng Teck Ma, Minhoe Hur, Jun Liu<br>
             <i>ECCV</i>, 2024 <br>
-            [<a href="#" target="_blank">ArXiv</a>] [<a href="https://github.com/sutdcv/SemTrack/tree/eval" target="_blank">Evaluation Code</a>]  <br>
+            [<a href="https://www.ecva.net/papers/eccv_2024/papers_ECCV/html/3555_ECCV_2024_paper.php" target="_blank">Paper</a>] [<a href="https://github.com/sutdcv/SemTrack/tree/eval" target="_blank">Evaluation Code</a>]  <br>
             Note: Authors with * all have equal contributions. 
           </div>
         </div> 
