--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <li><a class="nav-link scrollto" href="#download">Download</a></li>
 <!--           <li><a class="nav-link scrollto" href="#evaluation_metrics">Evaluation Metrics</a></li> -->
           <li><a class="nav-link scrollto " href="#publication">Publication</a></li>
-          <!-- <li><a class="nav-link scrollto" href="#people">People</a></li> -->
+          <li><a class="nav-link scrollto" href="#people">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -76,7 +76,7 @@
       <a href="#download" class="btn btn-primary scrollto">Download</a>
 <!--       <a href="#evaluation_metrics" class="btn btn-primary scrollto">Evaluation Metrics</a> -->
       <a href="#publication" class="btn btn-primary scrollto">Publication</a>
-      <!-- <a href="#people" class="btn btn-primary scrollto">People</a> -->
+      <a href="#people" class="btn btn-primary scrollto">Contact</a>
 
       <!-- <div class="uni-logo">
         <img src="assets/img/sutd.png" alt="Uni LOGO" width="240" height="100" style="background-color:rgb(255, 255, 255);">
@@ -194,7 +194,7 @@
               <div class="row justify-content-center">
                 <div class="col-lg-4 info">
                   <i class="bi bi-tools"></i>
-                  <h4><a href="https://forms.office.com/Pages/ResponsePage.aspx?id=drd2NJDpck-5UGJImDFiPQJNzw6AhuZDkzEViiWzJltUNjhKM01KWjhXN0FBNjcxNVBZQk03VVFHQi4u">Dataset & Toolkit</a></h4>
+                  <h4><a href="https://forms.gle/fN3od97Axck4nM6YA">Dataset & Toolkit</a></h4>
                   <p>Download our dataset and toolkit.</p>
                 </div>
 
@@ -306,15 +306,16 @@
 
 
     <!-- ======= People Section ======= -->
-    <!-- <section id="people" class="team">
+    <section id="people" class="team">
       <div class="container">
 
         <div class="section-title">
-          <h2>People</h2>
-          <p style="font-size: 20px;">Thanks to all team members for their hard working. </p>
+          <h2>Contact</h2>
+          <p style="font-size: 20px;">If you have any problems, please feel free to contact us at: </p>
+          <p style="font-size: 20px;">Xiaofei Hui [x.hui@lancaster.ac.uk]</p>
         </div>  
 
-          <div class="row justify-content-center">
+          <!-- <div class="row justify-content-center">
             <div class="col-md-auto">
               <div class="member">
                 <h4>sss</h4>
@@ -336,12 +337,12 @@
                   <a href=""><i class="material-icons">school</i></a>
                 </div>
               </div>
-            </div>
+            </div> -->
         
         </div>
 
       </div>
-    </section> -->
+    </section>
     <!-- End Team Section -->
 
     <!-- ======= Acknowledgement Section ======= -->
